force-app/main/default/objects/Promotion_Redemption__c/Promotion_Redemption__c.object-meta.xml
<CustomObject>
    <description>A new record is created when a tourism redemption is claimed. the numbers role up in to Tourism Promotion</description>
    <label>Promotion Redemption</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Redemption ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Redemptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>