force-app/main/default/objects/Promotion_Redemption__c/fields/customer__c.field-meta.xml
<CustomField>
    <fullName>customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>b2c_customer__c</referenceTo>
    <relationshipLabel>Redeemed Promotions</relationshipLabel>
    <relationshipName>Promotion_Redemptions</relationshipName>
    <type>Lookup</type>
</CustomField>