force-app/main/default/objects/Promotion_Redemption__c/fields/Email_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Email_opt_in__c</fullName>
    <label>Email opt in</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>