force-app/main/default/objects/Promotion_Redemption__c/fields/Guest_Email__c.field-meta.xml
<CustomField>
    <fullName>Guest_Email__c</fullName>
    <description>The email address of the guest that the VIP card was handed out to. this will initiate a welcome process (if not already registered) or simply log the spend against the account</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the Guests email address</inlineHelpText>
    <label>Guest Email</label>
    <type>Email</type>
</CustomField>