force-app/main/default/objects/Promotion_Redemption__c/fields/Guest_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Last_Name__c</fullName>
    <label>Guest Last Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>