force-app/main/default/objects/Promotion_Redemption__c/fields/Has_Been_Transfered__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Transfered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Transfered</label>
    <type>Checkbox</type>
</CustomField>