force-app/main/default/objects/Promotion_Redemption__c/fields/Month_of_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Year__c</fullName>
    <formula>MONTH(   DATEVALUE( CreatedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month of Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>