force-app/main/default/objects/Promotion_Redemption__c/fields/Redeem_Date_Day_Count__c.field-meta.xml
<CustomField>
    <fullName>Redeem_Date_Day_Count__c</fullName>
    <description>Used in calculation of Week Number</description>
    <formula>ROUND(Redeem_Date__c- DATE(YEAR(Redeem_Date__c),1,1),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in calculation of Week Number</inlineHelpText>
    <label>Redeem Date Day Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>