force-app/main/default/objects/Promotion_Redemption__c/fields/Redeemable_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Redeemable_Campaign__c</fullName>
    <label>Redeemable Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Redemptions</relationshipLabel>
    <relationshipName>Redemptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>