force-app/main/default/objects/Promotion_Redemption__c/fields/Redemption_Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Transaction_Value__c</fullName>
    <label>Redemption Transaction Value</label>
    <summarizedField>FF123_Transaction__c.Transaction_Value__c</summarizedField>
    <summaryForeignKey>FF123_Transaction__c.Promotion_Redemption__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>