force-app/main/default/objects/Promotion_Redemption__c/fields/Redemption_Type__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Type__c</fullName>
    <formula>IF( ISBLANK(Guest_Email__c) &amp;&amp; ISBLANK( customer__c ) , &quot;Anonymous Redemption&quot;,
       IF(ISBLANK( customer__c ) &amp;&amp; NOT(ISBLANK(Guest_Email__c))  , &quot;Acquisition&quot;,

          &quot;Known Customer&quot;
       )
   )</formula>
    <label>Redemption Type</label>
    <type>Text</type>
</CustomField>