force-app/main/default/objects/Promotion_Redemption__c/fields/Visit_Day__c.field-meta.xml
<CustomField>
    <fullName>Visit_Day__c</fullName>
    <formula>CASE(MOD(  Redeem_Date__c  - DATE(1900, 1, 6), 7), 0, &quot;6-Saturday&quot;, 1, &quot;7-Sunday&quot;, 2,&quot;1-Monday&quot;, 3, &quot;2-Tuesday&quot;, 4, &quot;3-Wednesday&quot;, 5, &quot;4-Thursday&quot;, 6,&quot;5-Friday&quot;,&quot;&quot;)</formula>
    <label>Visit Day</label>
    <type>Text</type>
</CustomField>