force-app/main/default/objects/Promotion_Redemption__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>