force-app/main/default/objects/Promotion_Redemption__c/fields/Voucher_Code__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Code__c</fullName>
    <description>This is the &quot;scan out&quot; code of the voucher (VIP card)</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the VIP card code</inlineHelpText>
    <label>Voucher Code</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>