force-app/main/default/objects/Promotion_Redemption__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <description>Week identifier in form YYYYWW.
A week runs from Monday to Sunday.</description>
    <formula>IF( Week_Num_Only__c = &apos;0&apos;, TEXT(YEAR(Redeem_Date__c) - 1) &amp; &apos;53&apos;, TEXT(YEAR(Redeem_Date__c)) &amp; LPAD(Week_Num_Only__c, 2,&apos;0&apos;))</formula>
    <inlineHelpText>Week identifier in form YYYYWW.
A week runs from Monday to Sunday.</inlineHelpText>
    <label>Week</label>
    <type>Text</type>
</CustomField>