force-app/main/default/objects/Promotion_Redemption__c/fields/Week_backup__c.field-meta.xml
<CustomField>
    <fullName>Week_backup__c</fullName>
    <description>Original version of Week number formula used in redemption reporting - Problems .. Thursday to Wednesday week ... Year crossover</description>
    <formula>TEXT(Year( Redeem_Date__c )) &amp;

if ( LEN(TEXT(
IF( 
CEILING( ( Redeem_Date__c - DATE( YEAR( Redeem_Date__c  ), 1, 1) + 1) / 7) &gt; 52,
52,
CEILING( ( Redeem_Date__c - DATE( YEAR( Redeem_Date__c ), 1, 1) + 1) / 7)
)
)) = 1, &quot;0&quot;, &quot;&quot;)

&amp; 

TEXT(
IF( 
CEILING( ( Redeem_Date__c - DATE( YEAR( Redeem_Date__c ), 1, 1) + 1) / 7) &gt; 52,
52,
CEILING( ( Redeem_Date__c - DATE( YEAR( Redeem_Date__c ), 1, 1) + 1) / 7)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week backup</label>
    <type>Text</type>
</CustomField>