force-app/main/default/objects/Promotion_Redemption__c/fields/Week_Num_Only__c.field-meta.xml
<CustomField>
    <fullName>Week_Num_Only__c</fullName>
    <description>Used in Calculation of Week Number, returns the week number only (ie. no year element)</description>
    <formula>TEXT(Case(
MOD( DATE(YEAR(Redeem_Date__c), 1, 1) - DATE (1900, 1, 7) , 7),
0, ROUND(( Redeem_Date_Day_Count__c + 3) /7,0), 
1, ROUND(( Redeem_Date_Day_Count__c + 4) /7,0), 
2, ROUND(( Redeem_Date_Day_Count__c + 5) /7,0), 
3, ROUND(( Redeem_Date_Day_Count__c + 6) /7,0), 
4, ROUND(( Redeem_Date_Day_Count__c + 7) /7,0), 
5, ROUND(( Redeem_Date_Day_Count__c + 1) /7,0), 
6, ROUND(( Redeem_Date_Day_Count__c + 2) /7,0), 
99))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in Calculation of Week Number, returns the week number only (ie. no year element)</inlineHelpText>
    <label>Week Num Only</label>
    <type>Text</type>
</CustomField>