force-app/main/default/objects/Promotion_Redemption__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Voucher_Code__c</columns>
    <columns>Redeemable_Campaign__c</columns>
    <columns>Guest_Email__c</columns>
    <columns>Email_opt_in__c</columns>
    <columns>Guest_First_Name__c</columns>
    <columns>Guest_Last_Name__c</columns>
    <columns>Redeem_Date__c</columns>
    <columns>Redemption_Transaction_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>