force-app/main/default/objects/Promotion_Redemption__c/listViews/All_with_Redemption_Value.listView-meta.xml
<ListView>
    <fullName>All_with_Redemption_Value</fullName>
    <columns>NAME</columns>
    <columns>Voucher_Code__c</columns>
    <columns>Redemption_Transaction_Value__c</columns>
    <columns>Redeemable_Campaign__c</columns>
    <columns>Guest_Email__c</columns>
    <columns>Email_opt_in__c</columns>
    <columns>Guest_First_Name__c</columns>
    <columns>Guest_Last_Name__c</columns>
    <columns>Redeem_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Redemption_Transaction_Value__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All with Redemption Value</label>
</ListView>