force-app/main/default/objects/Promotion_Redemption__c/listViews/Bicester_Redemptions_Today.listView-meta.xml
<ListView>
    <fullName>Bicester_Redemptions_Today</fullName>
    <columns>NAME</columns>
    <columns>Voucher_Code__c</columns>
    <columns>Redeemable_Campaign__c</columns>
    <columns>Guest_Email__c</columns>
    <columns>Email_opt_in__c</columns>
    <columns>Guest_First_Name__c</columns>
    <columns>Guest_Last_Name__c</columns>
    <columns>Location__c</columns>
    <columns>Redeem_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Redeemable_Campaign__c</field>
        <operation>startsWith</operation>
        <value>BV</value>
    </filters>
    <filters>
        <field>Redeem_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Bicester Redemptions (Today)</label>
    <language>en_US</language>
</ListView>