force-app/main/default/objects/Promotion_Redemption__c/listViews/La_Rozas_Redemptions_Today.listView-meta.xml
<ListView>
    <fullName>La_Rozas_Redemptions_Today</fullName>
    <columns>NAME</columns>
    <columns>Voucher_Code__c</columns>
    <columns>Redeemable_Campaign__c</columns>
    <columns>Guest_Email__c</columns>
    <columns>Email_opt_in__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Redeemable_Campaign__c</field>
        <operation>contains</operation>
        <value>LZ</value>
    </filters>
    <filters>
        <field>Redeem_Date__c</field>
        <operation>greaterThan</operation>
        <value>3/3/2016</value>
    </filters>
    <label>Las Rozas(Today)</label>
    <language>en_US</language>
</ListView>